--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,7 @@
     {% block header%}
     <ul>
         {% if request.user.is_authenticated %}
+        {% block logged_in_nav %}{% endblock %}
         <li><a href="{% url "logout" %}">Logout</a></li>
         {% else %}
         <li><a href="{% url "login" %}">Login</a></li>
